--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "mongoose": "~*"
+    "mongoose": "~*",
+    "passport":"*",
+    "passport-local":"*",
+    "passport-local-mongoose":"*"
   }
 }
