--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "mongoose": "~*",
-    "passport":"*",
+    "passport":"Lastest",
     "passport-local":"*",
     "passport-local-mongoose":"*"
   }
