--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "mongoose": "~*",
+    "mongoose": "latest",
     "passport":"latest",
     "passport-local":"latest",
     "passport-local-mongoose":"latest"
